# NASPilot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
backend/: pyproject.toml  requirements.lock.txt
backend/app/: lifespan.py  main.py
backend/app/api/v1/: ai.py  auth.py  notifications.py  plugins.py  router.py  system.py  tasks.py  websocket.py
backend/app/core/: config.py  database.py  deps.py  logging_config.py  security.py
backend/app/models/: __init__.py  log.py  notification.py  plugin.py  task.py  user.py
backend/app/plugins/: registry.py
backend/app/plugins/builtin/: alist_upload.py  btrfs_cleanup.py  cf_pages.py  cloudflare_ddns.py  docker_backup.py  log_cleanup.py  pt_rss.py  rclone_mount.py
backend/app/scheduler/: scheduler_service.py
backend/app/schemas/: auth.py  notification.py  plugin.py  system.py  task.py  user.py
backend/app/services/: auth_service.py  notification_service.py  system_service.py  task_service.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: AuthGuard.tsx  LogViewer.tsx  PluginConfigForm.tsx
frontend/src/hooks/: useAuth.tsx
frontend/src/i18n/: index.ts
frontend/src/i18n/locales/: en-US.json  zh-CN.json
frontend/src/layouts/: MainLayout.tsx
frontend/src/pages/: AIAssistant.tsx  AlistUpload.tsx  CloudflareDDNS.tsx  Dashboard.tsx  DockerBackup.tsx  Login.tsx  PT_RSS.tsx
frontend/src/utils/: api.ts  auth.ts
(+6 files in other folders)
